unpackaged/main/default/objects/Informacion_representante_legal__c/Informacion_representante_legal__c.object-meta.xml
<CustomObject>
    <label>Información Representante Legal</label>
    <nameField>
        <label>Nombre de Rep legal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Información Representantes Legales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>