unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Apellido_Paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno__c</fullName>
    <label>Apellido Paterno Rep</label>
    <length>30</length>
    <type>Text</type>
</CustomField>