unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Autoridad_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_Identificacion__c</fullName>
    <label>Autoridad Identificación Rep</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Identificacion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instituto Nacional Electoral</fullName>
            </value>
            <value>
                <fullName>Relaciones Exteriores</fullName>
            </value>
            <value>
                <fullName>Instituto de Control Vehicular</fullName>
            </value>
            <value>
                <fullName>Secretaría de Edicación Pública</fullName>
            </value>
            <value>
                <fullName>Instituto Nacional de Migración</fullName>
            </value>
            <value>
                <fullName>Extranjero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>