unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Cesion_a_Otra_Persona_Fisica_o_Moral__c.field-meta.xml
<CustomField>
    <fullName>Cesion_a_Otra_Persona_Fisica_o_Moral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cesión a Otra Persona Física o Moral</label>
    <referenceTo>Cesion_a_Otra_Persona_Fisica_o_Moral__c</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>