unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Check_Direccion_Principal__c.field-meta.xml
<CustomField>
    <fullName>Check_Direccion_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Dirección Principal</label>
    <type>Checkbox</type>
</CustomField>