unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio (Trabajo)</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Información Representantes Legales (Municipio (Trabajo))</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales1</relationshipName>
    <type>Lookup</type>
</CustomField>