unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Clave_del_Pais__c.field-meta.xml
<CustomField>
    <fullName>Clave_del_Pais__c</fullName>
    <formula>TEXT(Pais_de_Nacionalidad__r.CodigoPais__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave del País Rep</label>
    <type>Text</type>
</CustomField>