unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Codigo_Postal__c.Municipio__c</field>
            <operation>equals</operation>
            <valueField>$Source.Municipio__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Codigo_Postal__c</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>