unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Conoce_a_la_persona_representada__c.field-meta.xml
<CustomField>
    <fullName>Conoce_a_la_persona_representada__c</fullName>
    <label>¿Conoce a la persona representada?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <label>Sí</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>