unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>