unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Correo_electronico__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico__c</fullName>
    <label>Correo electrónico Rep</label>
    <type>Email</type>
</CustomField>