unpackaged/main/default/objects/Informacion_representante_legal__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <label>CURP Rep</label>
    <length>18</length>
    <type>Text</type>
</CustomField>