unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación</label>
    <referenceTo>Dictaminacion__c</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informaci_n_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>