unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Direccion_Rep_Legal_Apoderado__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Rep_Legal_Apoderado__c</fullName>
    <formula>Calle__c  +  Numero_Exterior__c + Numero_Interior__c + ColoniaLookup__c  +  Codigo_Postal__c + Municipio__c + EstadoLookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direccion Rep Legal / Apoderado</label>
    <type>Text</type>
</CustomField>