unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Domicilio_del_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_del_Trabajo__c</fullName>
    <label>Domicilio del Trabajo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>