unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>(TODAY () - Fecha_de_Nacimiento__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>