unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>