unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Escritura_Poliza_o_Acta__c.field-meta.xml
<CustomField>
    <fullName>Escritura_Poliza_o_Acta__c</fullName>
    <label>Escritura, Poliza o Acta Rep</label>
    <length>20</length>
    <type>Text</type>
</CustomField>