unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Estado_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Estado_Trabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado (Trabajo)</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Información Representantes Legales (Estado (Empresa))</relationshipLabel>
    <relationshipName>InformacionEmpresaRepresentantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>