unpackaged/main/default/objects/Informacion_representante_legal__c/fields/EstadoLookup__c.field-meta.xml
<CustomField>
    <fullName>EstadoLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Pais__c</field>
            <operation>equals</operation>
            <valueField>Estado__c.Pais__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>