unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extensión Rep</label>
    <length>10</length>
    <type>Text</type>
</CustomField>