unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Fecha_de_Escritura_del_Poder__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Escritura_del_Poder__c</fullName>
    <label>Fecha de Escritura del Poder Rep</label>
    <type>Date</type>
</CustomField>