unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Fecha_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento__c</fullName>
    <label>Fecha de Nacimiento Rep</label>
    <type>Date</type>
</CustomField>