unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Folio_Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Folio_Representante_Legal__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Folio Representante Legal</label>
    <type>AutoNumber</type>
</CustomField>