unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Lugar_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_Nacimiento__c</fullName>
    <label>Lugar de Nacimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lugar_Nacimiento</valueSetName>
    </valueSet>
</CustomField>