unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Monitor_Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Representante_Legal__c</fullName>
    <formula>CASE(Evalua_Monitor_Representante_Legal__c,
  				&quot;1&quot;, IMAGE(&quot;/resource/1690319029000/Monitor_CoAcreditado_01?&quot;, &quot;Monitor&quot;, 130,350),
						&quot;2&quot;, IMAGE(&quot;/resource/1690319071000/Monitor_CoAcreditado_02?&quot;, &quot;Monitor&quot;, 130,350),
						&quot;3&quot;, IMAGE(&quot;/resource/1690319088000/Monitor_CoAcreditado_03?&quot;, &quot;Monitor&quot;, 130,350),
						&quot;4&quot;, IMAGE(&quot;/resource/1690319101000/Monitor_CoAcreditado_04?&quot;, &quot;Monitor&quot;, 130,350),
						     IMAGE(&quot;/resource/1690319029000/Monitor_CoAcreditado_01?&quot;, &quot;Monitor&quot;, 130,350)
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monitor Representante Legal</label>
    <type>Text</type>
</CustomField>