unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.EstadoLookup__c</field>
            <operation>equals</operation>
            <valueField>Municipio__c.Estado__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>