unpackaged/main/default/objects/Informacion_representante_legal__c/fields/No_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>No_Identificacion__c</fullName>
    <label>No. Identificación Rep</label>
    <length>30</length>
    <type>Text</type>
</CustomField>