unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_cliente__c</fullName>
    <formula>Dictaminacion__r.Nombre_Completo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del cliente</label>
    <type>Text</type>
</CustomField>