unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Notario_Corredor_del_Poder__c.field-meta.xml
<CustomField>
    <fullName>Notario_Corredor_del_Poder__c</fullName>
    <label>Notario / Corredor del Poder Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>