unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Numero_Interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interior__c</fullName>
    <label>Número Interior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>