unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Pais_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacimiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacimiento Rep</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Información Representantes Legales (País de Nacimiento)</relationshipLabel>
    <relationshipName>Informaci_n_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>