unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Pais_de_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacionalidad Rep</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Información Representantes Legales (País de Nacionalidad)</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales1</relationshipName>
    <type>Lookup</type>
</CustomField>