unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Pais_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Pais_Trabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País (Trabajo)</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Información Representantes Legales (País Empresa)</relationshipLabel>
    <relationshipName>Informacino_Representantes_Legales1</relationshipName>
    <type>Lookup</type>
</CustomField>