unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Perfil_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Tercero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perfil Tercero Física</label>
    <referenceTo>Perfil_Tercero_Fisico__c</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>