unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Perfil_Tercero_Persona_Moral__c.field-meta.xml
<CustomField>
    <fullName>Perfil_Tercero_Persona_Moral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Perfil Tercero Persona Moral</label>
    <referenceTo>Perfil_Tercero_Moral__c</referenceTo>
    <relationshipLabel>Información Representantes Legales</relationshipLabel>
    <relationshipName>Informacion_Representantes_Legales</relationshipName>
    <type>Lookup</type>
</CustomField>