unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Proceso_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Venta__c</fullName>
    <formula>Dictaminacion__r.Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proceso de Venta</label>
    <type>Text</type>
</CustomField>