unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Regimen_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Regimen_Fiscal__c</fullName>
    <label>Régimen Fiscal Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>601	General de Ley Personas Morales</fullName>
            </value>
            <value>
                <fullName>603	Personas Morales con Fines no Lucrativos</fullName>
            </value>
            <value>
                <fullName>610	Residentes en el Extranjero sin Establecimiento Permanente en México</fullName>
            </value>
            <value>
                <fullName>620	Sociedades Cooperativas de Producción que optan por diferir sus ingresos</fullName>
            </value>
            <value>
                <fullName>622	Actividades Agrícolas, Ganaderas, Silvícolas y Pesqueras</fullName>
            </value>
            <value>
                <fullName>623	Opcional para Grupos de Sociedades</fullName>
            </value>
            <value>
                <fullName>624	Coordinados</fullName>
            </value>
            <value>
                <fullName>626	Régimen Simplificado de Confianza</fullName>
            </value>
            <value>
                <fullName>605	Sueldos y Salarios e Ingresos Asimilados a Salarios</fullName>
                <isActive>false</isActive>
                <label>605	Sueldos y Salarios e Ingresos Asimilados a Salarios</label>
            </value>
            <value>
                <fullName>606	Arrendamiento</fullName>
                <isActive>false</isActive>
                <label>606	Arrendamiento</label>
            </value>
            <value>
                <fullName>607	Régimen de Enajenación o Adquisición de Bienes</fullName>
                <isActive>false</isActive>
                <label>607	Régimen de Enajenación o Adquisición de Bienes</label>
            </value>
            <value>
                <fullName>608	Demás ingresos</fullName>
                <isActive>false</isActive>
                <label>608	Demás ingresos</label>
            </value>
            <value>
                <fullName>611	Ingresos por Dividendos (socios y accionistas)</fullName>
                <isActive>false</isActive>
                <label>611	Ingresos por Dividendos (socios y accionistas)</label>
            </value>
            <value>
                <fullName>612	Personas Físicas con Actividades Empresariales y Profesionales</fullName>
                <isActive>false</isActive>
                <label>612	Personas Físicas con Actividades Empresariales y Profesionales</label>
            </value>
            <value>
                <fullName>614	Ingresos por intereses</fullName>
                <isActive>false</isActive>
                <label>614	Ingresos por intereses</label>
            </value>
            <value>
                <fullName>615	Régimen de los ingresos por obtención de premios</fullName>
                <isActive>false</isActive>
                <label>615	Régimen de los ingresos por obtención de premios</label>
            </value>
            <value>
                <fullName>616	Sin obligaciones fiscales</fullName>
                <isActive>false</isActive>
                <label>616	Sin obligaciones fiscales</label>
            </value>
            <value>
                <fullName>621	Incorporación Fiscal</fullName>
                <isActive>false</isActive>
                <label>621	Incorporación Fiscal</label>
            </value>
            <value>
                <fullName>625	Régimen de las Actividades Empresariales con ingresos a través de Plataformas Tecnológicas</fullName>
                <isActive>false</isActive>
                <label>625	Régimen de las Actividades Empresariales con ingresos a través de Plataformas Tecnológicas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>