unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Registro_completo__c.field-meta.xml
<CustomField>
    <fullName>Registro_completo__c</fullName>
    <formula>AND (
			Check_Direccion_Principal__c,
			Check_Direccion_Laboral__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registro completo</label>
    <type>Checkbox</type>
</CustomField>