unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Informacion_representante_legal__c/&quot; &amp; Id &amp; &quot;/view&quot;,Folio_Representante_Legal__c  &amp; &quot; - &quot; &amp; Name 
										&amp; &quot; &quot; &amp; Apellido_Paterno__c &amp; &quot; &quot; &amp; Apellido_Materno__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representante Legal</label>
    <type>Text</type>
</CustomField>