unpackaged/main/default/objects/Informacion_representante_legal__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC Rep</label>
    <length>13</length>
    <type>Text</type>
</CustomField>