unpackaged/main/default/objects/Informacion_representante_legal__c/fields/RFC_CompaIa__c.field-meta.xml
<CustomField>
    <fullName>RFC_CompaIa__c</fullName>
    <label>RFC Compañía Rep</label>
    <length>13</length>
    <type>Text</type>
</CustomField>