unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Sub_Tipo_Fiscal_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tipo_Fiscal_Rep__c</fullName>
    <label>Sub Tipo Fiscal Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Persona Física</fullName>
            </value>
            <value>
                <fullName>Persona Moral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>