unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Tel_Celular__c.field-meta.xml
<CustomField>
    <fullName>Tel_Celular__c</fullName>
    <label>Tel. Celular Rep</label>
    <type>Phone</type>
</CustomField>