unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Tel_Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Tel_Domicilio__c</fullName>
    <label>Tel. Domicilio Rep</label>
    <type>Phone</type>
</CustomField>