unpackaged/main/default/objects/Informacion_representante_legal__c/fields/Tipo_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Identificacion__c</fullName>
    <label>Tipo Identificación Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credencial para votar</fullName>
            </value>
            <value>
                <fullName>Cédula Profesional</fullName>
            </value>
            <value>
                <fullName>Documentación expedida INM</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>Licencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>