unpackaged/main/default/objects/Informacion_representante_legal__c/validationRules/Persona_moral_actprofocu_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Persona_moral_actprofocu_obligatorio</fullName>
    <active>true</active>
    <description>Valida que si el sub tipo fiscal rep es igual a persona moral, se llene el campo actividad profesión ocupación.</description>
    <errorConditionFormula>AND
(
TEXT(Sub_Tipo_Fiscal_Rep__c) == &quot;Persona Moral&quot;,
OR(
ISNULL(TEXT(Actividad_Profesion_Ocupacion__c)),
ISBLANK(TEXT(Actividad_Profesion_Ocupacion__c))
)
)</errorConditionFormula>
    <errorDisplayField>Actividad_Profesion_Ocupacion__c</errorDisplayField>
    <errorMessage>Actividad/Profesión/Ocupación requerido</errorMessage>
</ValidationRule>