unpackaged/main/default/objects/Informacion_representante_legal__c/validationRules/Persona_moral_codigo_postal_obli.validationRule-meta.xml
<ValidationRule>
    <fullName>Persona_moral_codigo_postal_obli</fullName>
    <active>false</active>
    <description>Valida que si el sub tipo fiscal rep es igual a persona moral, se llene el campo código postal.</description>
    <errorConditionFormula>AND
(
TEXT(Sub_Tipo_Fiscal_Rep__c) == &quot;Persona Moral&quot;,
OR(
ISNULL(Codigo_Postal__c),
ISBLANK(Codigo_Postal__c)
)
)</errorConditionFormula>
    <errorDisplayField>Codigo_Postal__c</errorDisplayField>
    <errorMessage>Código Postal requerido</errorMessage>
</ValidationRule>