unpackaged/main/default/objects/Informacion_representante_legal__c/validationRules/Persona_moral_domicilio_trabajo_obli.validationRule-meta.xml
<ValidationRule>
    <fullName>Persona_moral_domicilio_trabajo_obli</fullName>
    <active>false</active>
    <description>Valida que si el sub tipo fiscal rep es igual a persona moral, se llene el campo domicilio trabajo.</description>
    <errorConditionFormula>AND
(
TEXT(Sub_Tipo_Fiscal_Rep__c) == &quot;Persona Moral&quot;,
OR(
ISNULL(Domicilio_del_Trabajo__c),
ISBLANK(Domicilio_del_Trabajo__c)
)
)</errorConditionFormula>
    <errorDisplayField>Domicilio_del_Trabajo__c</errorDisplayField>
    <errorMessage>Domicilio del Trabajo requerido</errorMessage>
</ValidationRule>