unpackaged/main/default/objects/Informacion_representante_legal__c/validationRules/Persona_moral_empresa_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Persona_moral_empresa_obligatorio</fullName>
    <active>true</active>
    <description>Valida que si el sub tipo fiscal rep es igual a persona moral, se llene el campo empresa.</description>
    <errorConditionFormula>AND
(
TEXT(Sub_Tipo_Fiscal_Rep__c) == &quot;Persona Moral&quot;,
OR(
ISNULL(Empresa__c),
ISBLANK(Empresa__c)
)
)</errorConditionFormula>
    <errorDisplayField>Empresa__c</errorDisplayField>
    <errorMessage>Empresa requerido</errorMessage>
</ValidationRule>